2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/instruments/camera.py:
	* src/chimera/instruments/filterwheel.py:
	* src/chimera/instruments/telescope.py:
	* src/chimera/instruments/dome.py:
	* src/chimera/instruments/focuser.py: Every iinstrument
	implementation have been improved, with full exception handling
	support and new interfaces implemented. Test it, please!

	* src/chimera/instruments/tests/test_telescope.py: More tests
	added.

	* src/chimera/instruments/tests/test_filterwheel.py:
	* src/chimera/instruments/tests/test_dome.py:
	* src/chimera/instruments/tests/test_focuser.py:
	* src/chimera/instruments/tests/test_camera.py: New unit tests for
	instruments.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/camera.py:
	* src/chimera/interfaces/filterwheel.py:
	* src/chimera/interfaces/telescopedriver.py:
	* src/chimera/interfaces/domedriver.py:
	* src/chimera/interfaces/weatherstation.py:
	* src/chimera/interfaces/focuserdriver.py:
	* src/chimera/interfaces/telescope.py:
	* src/chimera/interfaces/dome.py:
	* src/chimera/interfaces/cameradriver.py:
	* src/chimera/interfaces/focuser.py:
	* src/chimera/interfaces/filterwheeldriver.py:

	All Chimera interfaces (with some exceptions on driver interfaces)
	have been improved a LOT. These interfaces should be much more
	complete right now. An better validation scheme must be added
	(zope.interface maybe).

	Documentation was improved with exceptions on camera and telescope
	drivers (mostly because these interfaces grew up together with the
	respective implementations).

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/exceptions.py:
	Add exception cause system allowing new ChimeraExceptions raised
	in the context of another exception to carry information about the
	original exception.

	Add new exceptions.

	ChimeraException now support BaseException parameters and are
	properly de/serialized.
